<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="20dp">

    <com.mancj.materialsearchbar.MaterialSearchBar
        android:id="@+id/bookSearchBar"
        style="@style/MaterialSearchBarLight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:mt_hint="@string/select_book"
        app:mt_maxSuggestionsCount="20"
        app:mt_placeholder="@string/select_book"
        app:mt_placeholderColor="@color/grey4"
        app:mt_speechMode="false" />

    <LinearLayout
        android:id="@+id/bookSearchBarLine"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/bookSearchBar" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/bookRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/toolbar"
        android:padding="10dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/bookSearchBarLine" />

    <RadioGroup
        android:id="@+id/writeTypeRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bookRecyclerView">

        <RadioButton
            android:id="@+id/memoRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:button="@null"
            android:text="@string/memo"
            android:textColor="@drawable/write_type_radio_button" />

        <RadioButton
            android:id="@+id/topicRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:text="@string/topic"
            android:textColor="@drawable/write_type_radio_button" />
    </RadioGroup>

    <TextView
        android:id="@+id/dateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="2021.08.13"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/writeTypeRadioGroup"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bookRecyclerView" />

    <EditText
        android:id="@+id/titleEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@null"
        android:hint="@string/write_title"
        app:layout_constraintTop_toBottomOf="@id/dateTextView" />

    <LinearLayout
        android:id="@+id/titleEditTextLine"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/black"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/titleEditText" />

    <EditText
        android:id="@+id/contentEditText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:background="@null"
        android:gravity="start"
        android:hint="@string/write_content"
        app:layout_constraintBottom_toTopOf="@+id/storeButtonLayout"
        app:layout_constraintTop_toBottomOf="@id/titleEditTextLine" />

    <LinearLayout
        android:id="@+id/storeButtonLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contentEditText">

        <Button
            android:id="@+id/storeButton"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="0dp"
            android:text="@string/store"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="10dp"
            android:background="@color/black" />

        <Button
            android:id="@+id/temporaryCountButton"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="0dp"
            android:text="0"
            android:textColor="@color/black" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>