<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="25dp">

    <TextView
        android:id="@+id/privacyTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/privacy"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/clubCheckLayout"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/clubCheckLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        app:layout_constraintTop_toBottomOf="@+id/privacyTextView">

        <CheckBox
            android:minHeight="0dp"
            android:id="@+id/club1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:text="북클럽A"
            android:textColor="@drawable/write_type_radio_button" />

        <LinearLayout
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/grey4"
            android:orientation="vertical">

        </LinearLayout>

        <CheckBox
            android:minHeight="0dp"
            android:id="@+id/club2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:text="북클럽B"
            android:textColor="@drawable/write_type_radio_button" />

        <LinearLayout
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/grey4"
            android:orientation="vertical">

        </LinearLayout>

        <CheckBox
            android:minHeight="0dp"
            android:id="@+id/club3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:text="북클럽C"
            android:textColor="@drawable/write_type_radio_button" />
    </LinearLayout>

    <Button
        android:id="@+id/temporaryStoreButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temporary_store"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:textColor="@color/black"
        android:backgroundTint="@color/grey5"
        app:layout_constraintTop_toBottomOf="@+id/clubCheckLayout"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/storeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/store"
        android:layout_marginLeft="30dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:textColor="@color/black"
        android:backgroundTint="@color/main_yellow"
        app:layout_constraintTop_toBottomOf="@+id/clubCheckLayout"
        app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>