<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:elevation="0dp">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/toolbar"
                android:minHeight="?android:attr/actionBarSize" />

        </com.google.android.material.appbar.AppBarLayout>

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?android:attr/actionBarSize"
            android:layout_marginBottom="?android:attr/actionBarSize"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">
        </FrameLayout>

        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/bottomAppBar"
            style="@style/Widget.MaterialComponents.BottomAppBar.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            app:backgroundTint="@color/white"
            app:elevation="0dp">

            <ImageButton
                android:id="@+id/writeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/ic_baseline_create_36" />
        </com.google.android.material.bottomappbar.BottomAppBar>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>


    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start">

        <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="20dp">

            <TextView
                android:id="@+id/userNameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="이름"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/userInfoLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/userNameTextView">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="아이디:06021"
                    android:textColor="@color/black" />

                <Button
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/update_user_info"
                    android:textColor="@color/black" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/ExpandableView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="10dp"
                app:layout_constraintBottom_toTopOf="@+id/settingsLayout"
                app:layout_constraintTop_toBottomOf="@id/userInfoLayout" />

            <LinearLayout
                android:id="@+id/settingsLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                app:layout_constraintBottom_toBottomOf="parent">

                <Button
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="0dp"
                    android:minHeight="0dp"
                    android:padding="5dp"
                    android:text="@string/app_tutorial"
                    android:textColor="@color/black"
                    android:textStyle="bold"

                    app:strokeColor="@color/black"
                    app:strokeWidth="1dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right">

                    <Button
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minWidth="0dp"
                        android:text="@string/app_version"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="2dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="@color/black" />

                    <Button
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minWidth="0dp"
                        android:text="@string/question"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="2dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="@color/black" />

                    <Button
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minWidth="0dp"
                        android:text="@string/settings"
                        android:textColor="@color/black"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.navigation.NavigationView>
</androidx.drawerlayout.widget.DrawerLayout>